mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
spec:
  selector:
    app: mongodb  # To musi odpowiadać etykiecie użytej w twoim deployment/StatefulSet MongoDB
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  type: ClusterIP
