nodejs-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodejs-app-ingress
spec:
  rules:
  - http:
      paths:
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: nodejs-app-service
            port:
              number: 30847
      - path: /app
        pathType: Prefix
        backend:
          service:
            name: nodejs-app-service
            port:
              number: 30847
